// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion test suite Snap 1 1`] = `
<div>
  <ul />
  <p>
    
  </p>
</div>
`;

exports[`Accordion test suite Snap 2 1`] = `
<div>
  <ul>
    <li>
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
  <p>
    
  </p>
</div>
`;

exports[`Accordion test suite Snap 4 1`] = `
<div>
  <ul>
    <li>
      <button
        key="0"
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li>
      <button
        key="1"
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li>
      <button
        key="2"
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
  <p>
    Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
  </p>
</div>
`;

exports[`Accordion test suite opens any clicked section 1`] = `
<div>
  <ul>
    <li>
      <button
        key="0"
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li>
      <button
        key="1"
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li>
      <button
        key="2"
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
  <p>
    Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
  </p>
</div>
`;
